# convergio-agent-runtime

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-agent-runtime/: Cargo.toml
crates/convergio-agent-runtime/src/: adaptation.rs  adaptation_routes.rs  allocator.rs  allocator_tests.rs  concurrency.rs  context.rs  context_enrichment.rs  context_routes.rs  delegation.rs  delegation_tests.rs  ext.rs  harness.rs  heartbeat.rs  lib.rs  mcp_defs.rs  monitor_helpers.rs  plan_task_update.rs  reaper.rs  repo_root.rs  respawn.rs  respawn_tests.rs  routes.rs  scheduler.rs  scheduler_tests.rs  schema.rs  scope.rs  spawn_backend.rs  spawn_enrich.rs  spawn_guard.rs  spawn_monitor.rs  spawn_routes.rs  spawner.rs  token_parser.rs  token_parser_tests.rs  types.rs  worktree_owner.rs  worktree_reaper.rs
crates/convergio-workspace/: Cargo.toml
crates/convergio-workspace/src/: codegraph.rs  codegraph_routes.rs  ext.rs  guard.rs  lib.rs  mcp_defs.rs  reaper.rs  routes.rs
docs/adr/: 001-extraction.md  ADR-010-security-audit-fixes.md
