[workspace]
resolver = "2"
members = [
    "crates/convergio-agent-runtime",
    "crates/convergio-workspace",
]

[workspace.package]
version = "0.1.12"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-agent-runtime"

[workspace.dependencies]
# SDK dependencies
convergio-types = "0.1"
convergio-db = "0.1"
convergio-telemetry = "0.1"

# Extracted crate dependencies
convergio-ipc = "0.1"
convergio-workspace = { path = "crates/convergio-workspace" }

# Common deps — pin same versions as SDK for compatibility
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
r2d2 = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "6"
