[package]
name = "convergio-workspace"
description = "Workspace management: worktree reaper, auto-cleanup"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
